# Net-Camera

./: CMakeLists.txt  README.md
MQTTClient-C/: CMakeLists.txt
NetCamera/: CMakeLists.txt  camera.c  camera.h  main.c
